# solaredge-modbus

./: .gitignore  CHANGELOG.md  MQTT.md  MQTT_QUICKSTART.md  README.md  docker-compose.yml  main.py  mosquitto.conf  pyproject.toml
.github/workflows/: python-package.yml
examples/: mqtt_examples.py
solaredge_modbus/: cli.py  client.py  models.py  registers.py  schemas.py
solaredgemodbus2mqtt/: __init__.py
solaredgemodbus2mqtt/mqtt/: __init__.py  gateway.py
solaredgemodbus2mqtt/solaredge_modbus/: __init__.py  cli.py
tests/: test_cli_mqtt.py  test_client_integration.py  test_mqtt_gateway.py  test_parsing_unit.py  test_schemas.py
